# er-climate-monitor

./: package.json
authentication-service/: package.json
backend/: compose.yaml  package.json  tsconfig.json
backend/precipitation-service/src/: index.ts
backend/precipitation-service/src/controllers/: precipitationController.ts
backend/precipitation-service/src/models/: precipitationModel.ts
backend/precipitation-service/src/routes/: precipitationRoutes.ts
backend/precipitation-service/src/routes/paths/: getPaths.ts  postPaths.ts
detection-service/: package.json
notification-service/: package.json
sensor/: configuration.yaml  create_template.py  pyproject.toml  sensor_template.py
sensor-registry/: package.json
